# Brains-AIGen-RAG

./: .gitignore  AGENTS.md  BRAIN.md  README.md  TODO.md  pyproject.toml
brain/: __init__.py  __main__.py  cli.py
brain/commands/: __init__.py  health.py  mcp.py  pdf.py  research.py  vault.py
brain/config/: __init__.py  loader.py  models.py  sources.py
brain/mcp/: __init__.py  server.py
brain/mcp/tools/: __init__.py  experiments.py  notes.py  search.py
brain/research/: __init__.py  memory.py  models.py  orchestration.py
brain/shared/: __init__.py  formatting.py  health.py  langchain.py  retrieval.py  runtime.py  text.py
brain/sources/pdf/: __init__.py  fetch.py  indexing.py  models.py  parsers.py  search.py
brain/sources/pdf/backends/: __init__.py  grobid.py  marker.py  pdfplumber.py  pymupdf.py
brain/sources/vault/: __init__.py  indexing.py  markdown.py  models.py  related.py  search.py
brains/: __init__.py  __main__.py  cli.py
brains/background/: __init__.py  app.py  jobs.py  runner.py  tasks.py
brains/commands/: __init__.py  graph.py  health.py  mcp.py  pdf.py  research.py  tasks.py  vault.py
brains/config/: __init__.py  loader.py  models.py
brains/mcp/: __init__.py  server.py
brains/mcp/tools/: __init__.py  experiments.py  notes.py  search.py
brains/research/: __init__.py  formatting.py  memory.py  models.py  orchestration.py
brains/shared/: __init__.py  health.py  langchain.py  ollama.py  preprocessing.py  retrieval.py  runtime.py
brains/sources/: __init__.py
brains/sources/graph/: __init__.py  indexing.py  models.py  search.py  serialization.py
brains/sources/pdf/: __init__.py  chunking.py  fetch.py  indexing.py  models.py  parsers.py  search.py  structured.py
brains/sources/pdf/backends/: __init__.py  docling.py  factory.py  grobid.py  marker.py  pdfplumber.py  pymupdf.py
brains/sources/vault/: __init__.py  chunking.py  indexing.py  markdown.py  models.py  parsers.py  related.py  search.py
brains/sources/vault/backends/: __init__.py  docling.py
config/: brain.toml  brains.toml  local.example.toml
scripts/: check_ollama_models.py  diagnose_lancedb_timeout.py  diagnose_mypy_hang.py  ensure_ollama_models.py  fetch_literature_pdfs.py  fetch_literature_pdfs.sh
tests/: test_background_jobs.py  test_cli.py  test_config.py  test_extended_smoke.py  test_graph_indexing.py  test_graph_search.py  test_index_health.py  test_langchain.py  test_mcp_tools.py  test_ollama_models.py  test_pdf_fetch.py  test_pdf_search.py  test_research.py  test_vault_indexing.py  test_vault_search.py
